--- a/index.html
+++ b/index.html
@@ -155,16 +155,20 @@
             </div>
           </div>
 
-          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)" data-name="Wang Zhiwei (Cola)" data-role="PhD Student" data-bio="Research: moral differential mode, identity across cultures. Email: cola@university.edu">
-            <div class="avatar"><img src="https://images.unsplash.com/photo-1554151228-14d9def656e4?auto=format&fit=crop&w=400&q=60" alt="Wang Zhiwei"></div>
-            <div>
-              <div style="font-weight:600">Wang Zhiwei (Cola)</div>
-              <div class="muted">PhD Student</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+         <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+     data-name="Ziyan Wang"
+     data-role="Master Student"
+     data-bio="Research interest: East Asian Culture & Mental Health. Email: ziyan.wang@university.edu">
+  <div class="avatar">
+    <img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/20231225101121507.png"
+         alt="Ziyan Wang">
+  </div>
+  <div>
+    <div style="font-weight:600">Ziyan Wang</div>
+    <div class="muted">Master Student</div>
+  </div>
+</div>
+
 
     <!-- RESEARCH -->
     <section id="research">
