--- a/index.html
+++ b/index.html
@@ -138,100 +138,172 @@
         <h2>People</h2>
         <p class="muted">Faculty, postdocs, PhD students, collaborators, and alumni.</p>
         <div class="people-list" style="margin-top:14px">
-          <!-- Repeat this block for each person -->
-          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)" data-name="Prof. Alex Lee" data-role="Principal Investigator" data-bio="Research: cultural cognition, morality. Email: alex.lee@university.edu">
-            <div class="avatar"><img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?auto=format&fit=crop&w=400&q=60" alt="Alex Lee"></div>
+
+          <!-- PI -->
+          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+               data-name="Prof. Xiaomeng Hu"
+               data-role="Principal Investigator"
+               data-bio="Email: xiaomenghu@ruc.edu.cn">
+            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/xmh.png" alt="Xiaomeng Hu"></div>
             <div>
-              <div style="font-weight:600">Prof. Alex Lee</div>
+              <div style="font-weight:600">Prof. Xiaomeng Hu</div>
               <div class="muted">Principal Investigator</div>
             </div>
           </div>
 
-          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)" data-name="Dr. Maya Santos" data-role="Postdoctoral Fellow" data-bio="Research: cross-cultural emotion, measurement. Email: maya.santos@university.edu">
-            <div class="avatar"><img src="https://images.unsplash.com/photo-1545996124-1b4c8f72b0c8?auto=format&fit=crop&w=400&q=60" alt="Maya Santos"></div>
+          <!-- Ziyan Wang -->
+          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+               data-name="Ziyan Wang"
+               data-role="Master Student"
+               data-bio="Research interest: East Asian Culture & Mental Health. Email: 627389063@qq.com">
+            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/wzy.png" alt="Ziyan Wang"></div>
             <div>
-              <div style="font-weight:600">Dr. Maya Santos</div>
-              <div class="muted">Postdoctoral Fellow</div>
+              <div style="font-weight:600">Ziyan Wang</div>
+              <div class="muted">Master Student</div>
             </div>
           </div>
 
-         <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
-     data-name="Ziyan Wang"
-     data-role="Master Student"
-     data-bio="Research interest: East Asian Culture & Mental Health. Email: ziyan.wang@university.edu">
-  <div class="avatar">
-    <img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/20231225101121507.png"
-         alt="Ziyan Wang">
-  </div>
-  <div>
-    <div style="font-weight:600">Ziyan Wang</div>
-    <div class="muted">Master Student</div>
-  </div>
-</div>
+          <!-- Huarong Liu -->
+          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+               data-name="Huarong Liu"
+               data-role="Master Student"
+               data-bio="Research interest: AI for Prosocial Behavior. Email: 2023101969@ruc.edu.cn">
+            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/lhr.png" alt="Huarong Liu"></div>
+            <div>
+              <div style="font-weight:600">Huarong Liu</div>
+              <div class="muted">Master Student</div>
+            </div>
+          </div>
 
+          <!-- Qilong Li -->
+          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+               data-name="Qilong Li"
+               data-role="Master Student"
+               data-bio="Research interest: Moral psychology. Email: liqilong20@ruc.edu.cn">
+            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/lql.png" alt="Qilong Li"></div>
+            <div>
+              <div style="font-weight:600">Qilong Li</div>
+              <div class="muted">Master Student</div>
+            </div>
+          </div>
+
+          <!-- Yumeng Sun -->
+          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+               data-name="Yumeng Sun"
+               data-role="Master Student"
+               data-bio="Research interest: AI for moral psychology and well-being. Email: 2025103903@ruc.edu.cn">
+            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/sym.png" alt="Yumeng Sun"></div>
+            <div>
+              <div style="font-weight:600">Yumeng Sun</div>
+              <div class="muted">Master Student</div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
 
     <!-- RESEARCH -->
     <section id="research">
-      <div class="card">
-        <h2>Research</h2>
-        <p class="muted">Our research streams include:</p>
-        <div class="grid" style="margin-top:12px">
-          <div class="card">
-            <h4>Culture & Cognition</h4>
-            <p class="muted">How cultural context influences reasoning, categorization, and perception.</p>
-          </div>
-          <div class="card">
-            <h4>Moral Psychology</h4>
-            <p class="muted">Investigating moral differential modes and universalist vs. particularist ethics.</p>
-          </div>
-          <div class="card">
-            <h4>Identity & Wellbeing</h4>
-            <p class="muted">How cultural identities shape mental health and social outcomes.</p>
-        </div>
-        </div>
+    <h2>Research</h2>
+    <p>Our laboratory operates within the theoretical framework of cultural psychology, aiming to explore the psychological processes and behavioral patterns that are both universal and culturally specific among humans. We seek to answer what psychological and behavioral traits are shared by humans as cultural beings and which are unique to specific cultures, while also investigating the dynamic construction between culture and psychology.</p>
+    <p>Cultural psychology holds both theoretical and applied value. Theoretically, future research will uncover the biological, psychological, and social mechanisms through which culture constructs psychology. In application, it will expand the translation of cultural psychology findings in political, business, and academic spheres. For example, in politics, this includes cultural confidence, cultural soft power, and building a community with a shared future for humanity; in business, it involves cross-cultural management, localization of global brands, and organizational culture; in academia, it encompasses interdisciplinary integration and collaboration.</p>
 
-        <h3 style="margin-top:16px">Selected projects</h3>
-        <div style="display:flex;flex-direction:column;gap:12px;margin-top:10px">
-          <div class="research-item card">
-            <div style="width:84px;height:84px;border-radius:8px;overflow:hidden;background:#eef">
-              <img src="https://images.unsplash.com/photo-1503676260728-1c00da094a0b?auto=format&fit=crop&w=600&q=60" alt="project" style="width:100%;height:100%;object-fit:cover">
-            </div>
-            <div>
-              <div style="font-weight:700">Moral Differential Mode across Cultures</div>
-              <div class="muted">An experimental-computational project comparing moral judgments in East Asia, Latin America, and Europe.</div>
-            </div>
-          </div>
-
-          <div class="research-item card">
-            <div style="width:84px;height:84px;border-radius:8px;overflow:hidden;background:#eef">
-              <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=600&q=60" alt="project" style="width:100%;height:100%;object-fit:cover">
-            </div>
-            <div>
-              <div style="font-weight:700">Open Methods in Cross-cultural Surveys</div>
-              <div class="muted">Developing reproducible methods for large-scale cross-cultural sampling and measurement equivalence.</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <h3>Specific Research Questions</h3>
+    <ul>
+        <li>How does culture shape thinking? (Behavioral and neural mechanisms of dialectical vs. analytical thinking)</li>
+        <li>How does culture shape morality? (Cultural differences and temporal-spatial changes in morality)</li>
+        <li>How does culture shape well-being? (Theories of well-being among Chinese people)</li>
+        <li>How does culture influence the psychology of artificial intelligence? (Cultural differences in AI ethics)</li>
+        <li>International and domestic students (mental health, cultural adaptation, and well-being)</li>
+    </ul>
+</section>
 
     <!-- PUBLICATIONS -->
-    <section id="publications">
+<section id="publications">
+  <div class="card">
+    <h2>Publications</h2>
+    <p class="muted">Selected peer-reviewed papers and preprints. For a full list, see our <a href="#">Google Scholar</a>.</p>
+
+    <div class="pubs" style="margin-top:12px">
+
+      <!-- Existing examples -->
       <div class="card">
-        <h2>Publications</h2>
-        <p class="muted">Selected peer-reviewed papers and preprints. For a full list, see our <a href="#">Google Scholar</a>.</p>
-        <div class="pubs" style="margin-top:12px">
-          <div class="card">
-            <div style="font-weight:700">Lee, A., & Santos, M. (2025). Cultural differences in moral judgment. <span class="muted">Journal of Cultural Psychology.</span></div>
-            <div class="muted" style="font-size:14px;margin-top:6px">DOI: 10.xxxx/xxxx</div>
-          </div>
-          <div class="card">
-            <div style="font-weight:700">Wang, Z. (2024). Identity and moral differential mode. <span class="muted">Preprint.</span></div>
-            <div class="muted" style="font-size:14px;margin-top:6px">Available on OSF link</div>
-          </div>
-        </div>
+        <div style="font-weight:700">Lee, A., & Santos, M. (2025). Cultural differences in moral judgment. <span class="muted">Journal of Cultural Psychology.</span></div>
+        <div class="muted" style="font-size:14px;margin-top:6px">DOI: 10.xxxx/xxxx</div>
       </div>
-    </section>
+      <div class="card">
+        <div style="font-weight:700">Wang, Z. (2024). Identity and moral differential mode. <span class="muted">Preprint.</span></div>
+        <div class="muted" style="font-size:14px;margin-top:6px">Available on OSF link</div>
+      </div>
+
+      <!-- New publications inserted -->
+      <h3 style="margin-top:20px;font-weight:700">International Journal Articles</h3>
+
+      <div class="card">
+        <div style="font-weight:700">Hu, X., & Yan, C. G. (2024). Current status and future challenges in brain imaging: Insights from leading experts. <span class="muted">Medicine Plus, 100049.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Teng, Y., Li, H. X., Chen, S. X., Castellanos, F. X., Yan, C. G., & Hu, X*. (2024). Mapping the Neural Mechanism that Distinguishes between Holistic Thinking and Analytic Thinking. <span class="muted">NeuroImage, 120627.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Li, H. X., & Hu, X*. (2022). Dialectical Thinking Is Linked With Smaller Left Nucleus Accumbens and Right Amygdala. <span class="muted">Frontiers in Psychology, 13, 760489.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Hu, X.*, Wang, Y., Liao, S., & Peng, K. (2021). Do experiences studying abroad promote dialectical thinking? Empirical evidence from Chinese international students. <span class="muted">Frontiers in Psychology, 1966.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Yu, F., Peng, K., & Hu, X*. (2020). Knowledge is money: Do people think cultural capital can be transformed into economic value? <span class="muted">Psych Journal.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Hu, X., Zhu, Y., Yu, F., Wilder, D. A., Zhang, L., Chen, S. X., & Peng, K*. (2020). A cross-cultural examination on global orientations and moral foundations. <span class="muted">Psych Journal, 9:108–117.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Hu, X., Chen, S., Zhang, L., Yu, F., Peng, K*, & Liu, L.* (2018). Do Chinese Traditional and Modern Cultures Affect Young Adults’ Moral Priorities? <span class="muted">Frontiers in Psychology, 9:1799.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Zhou, X., Yang, Q., & Hu, X*. (2018). When money meets morality: Human universals and cultural differences. <span class="muted">PsyCh Journal, 7:105–106.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Hu, X.*, Kim, A., Siwek, N., & Wilder, D. (2017). The Facebook paradox: effects of Facebooking on individuals’ social relationships and psychological well-being. <span class="muted">Frontiers in Psychology, 8:87.</span></div>
+      </div>
+
+      <div class="card">
+        <div style="font-weight:700">Hu, X.*, & Chen, Y. (2010). Psychology and Micro-blogging: Self-Presentation, Social Interaction and Social Culture. <span class="muted">Proceedings of 2nd IEEE Symposium on Web Society, 71–76.</span></div>
+      </div>
+
+      <h3 style="margin-top:20px;font-weight:700">Chinese Journal Articles (First or Corresponding Author)</h3>
+
+      <div class="card"><div style="font-weight:700">赵偲琪, 刘若婷, & 胡晓檬. (2024). 全人类认同提升亲社会心理和行为及其解释机制. <span class="muted">心理科学进展, 32(10), 1697.</span></div></div>
+      <div class="card"><div style="font-weight:700">滕玥, 张昊天, 赵偲琪, 彭凯平*, 胡晓檬*. (2024). 多元文化经历提升人类对机器人的利他行心智知觉的中介作用. <span class="muted">心理学报, 56(2), 146-160.</span></div></div>
+      <div class="card"><div style="font-weight:700">王扬, 滕玥, 彭凯平, & 胡晓檬*. (2022). 新冠疫情期间海外中国留学生心理健康的影响因素及其干预策略. <span class="muted">应用心理学, 28(2), 134-146.</span></div></div>
+      <div class="card"><div style="font-weight:700">胡晓檬*, 彭凯平, & 陈晓华. (2021). 全球化悖论的文化心理学解读. <span class="muted">应用心理学, 28(3), 245-254.</span></div></div>
+      <div class="card"><div style="font-weight:700">郭永玉，胡晓檬*. (2021). 求真理 去服务 得自由. <span class="muted">心理学探新, (2), 186-192.</span></div></div>
+      <div class="card"><div style="font-weight:700">廖思华，丁凤仪，徐迩嘉，胡平，胡晓檬*. (2021). 从“留学热”到“海归潮”： 海归群体反向文化震荡的心理与行为效应. <span class="muted">应用心理学, 27(3), 204-214.</span></div></div>
+      <div class="card"><div style="font-weight:700">胡晓檬, 韩雨芳, 喻丰, & 彭凯平. (2020). 多元文化经历的双刃剑效应: 心理后果与边界条件. <span class="muted">应用心理学, 27(1), 1-9.</span></div></div>
+      <div class="card"><div style="font-weight:700">喻丰, 许丽颖, 韩婷婷, 刘知远, 钱小军, 彭凯平, & 胡晓檬*. (2020). 道德节律：基于新浪微博的道德动机每分变化. <span class="muted">科学通报.</span></div></div>
+      <div class="card"><div style="font-weight:700">胡晓檬, 喻丰, 彭凯平*. (2018). 文化如何影响道德?文化间变异、文化内变异与多元文化的视角. <span class="muted">心理科学进展, 26(11), 2081-2090.</span></div></div>
+
+      <h3 style="margin-top:20px;font-weight:700">Books and Translations</h3>
+      <ol>
+        <li>潇檬 主编. (2022). 《心理学如何影响世界》. 清华大学出版社</li>
+        <li>潇檬 著. (2024). 《文化心理学与生活》. 清华大学出版社</li>
+        <li>潇檬 译. (2024). 《社会心理学与人类本性》. 中国人民大学出版社</li>
+        <li>潇檬 等 译. (2024). 《思考：回忆录》. 中国人民大学出版社</li>
+        <li>潇檬 主编. (2024). 《和心理学大咖聊聊天》. 北京颉滕文化传媒公司</li>
+      </ol>
+
+    </div>
+  </div>
+</section>
 
     <!-- OPPORTUNITIES -->
     <section id="opportunities">
