--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                data-name="Prof. Xiaomeng Hu"
                data-role="Principal Investigator"
                data-bio="Email: xiaomenghu@ruc.edu.cn">
-            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/xmh.png" alt="Xiaomeng Hu"></div>
+            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/0bdf42a8a1d45030f58099fb4682605dbb927196/hxm.jpg" alt="Xiaomeng Hu"></div>
             <div>
               <div style="font-weight:600">Prof. Xiaomeng Hu</div>
               <div class="muted">Principal Investigator</div>
