--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
       <div>
         <div class="card">
           <h1>Culture shapes the way we think, feel, and relate.</h1>
-          <p class="lead">We are a multidisciplinary research group investigating how cultural contexts influence cognition, moral judgment, identity, and social networks. Located at [Your Institution], our lab combines experiments, surveys, and multi-method approaches.</p>
+          <p class="lead">Our laboratory operates within the theoretical framework of cultural psychology, aiming to explore the psychological processes and behavioral patterns that are both universal and culturally specific among humans. We seek to answer what psychological and behavioral traits are shared by humans as cultural beings and which are unique to specific cultures, while also investigating the dynamic construction between culture and psychology.</p>
           <a class="cta" href="#research">Explore our research</a>
           <div class="stats">
-            <div class="stat"><div style="font-weight:700">15+</div><div class="muted">Projects</div></div>
-            <div class="stat"><div style="font-weight:700">40+</div><div class="muted">Publications</div></div>
+            <div class="stat"><div style="font-weight:700">7+</div><div class="muted">Projects</div></div>
+            <div class="stat"><div style="font-weight:700">25+</div><div class="muted">Publications</div></div>
             <div class="stat"><div style="font-weight:700">10</div><div class="muted">Team members</div></div>
           </div>
         </div>
@@ -106,30 +106,12 @@
         <div class="card">
           <h3>Latest News</h3>
           <ul style="padding-left:18px;margin:8px 0 0 0;color:var(--muted);">
-            <li><strong>2025-10-12</strong> — New preprint: Cultural differences in moral reasoning. <a href="#publications">Read</a></li>
-            <li><strong>2025-07-04</strong> — Lab open house & student recruitment. <a href="#opportunities">Apply</a></li>
-            <li><strong>2025-05-19</strong> — Invited talk at International Cultural Psychology Conference.</li>
+            <li><strong>2025-10-26</strong> — New published: Artificial Intelligence Versus Human Fundraisers: Evidence That Narrative Perspective and Fundraiser Identity Influence Donation Intentions. <a href="#publications">Read</a></li>
+            <li><strong>2025-07-21</strong> — New published: How to capture moral behaviors: From laboratory to everyday life.<a href="#publications">Read</a></li>
+            <li><strong>2025-07-04</strong> — Lab open research assistant recruitment. <a href="#opportunities">Apply</a></li>
           </ul>
         </div>
       </aside>
-    </section>
-
-    <!-- ABOUT -->
-    <section id="about">
-      <div class="card">
-        <h2>About the Lab</h2>
-        <p class="muted">The Cultural Psychology Lab is led by Prof. [Name]. We study how cultural norms, language, and institutions shape psychological processes across diverse populations. Our work spans lab experiments, field studies, and computational models.</p>
-        <div style="margin-top:12px;display:grid;grid-template-columns:1fr 1fr;gap:12px">
-          <div class="card" style="background:var(--glass)">
-            <h4>Mission</h4>
-            <p class="muted">To advance theory and application in cultural psychology through rigorous, reproducible research and open collaboration.</p>
-          </div>
-          <div class="card" style="background:var(--glass)">
-            <h4>Approach</h4>
-            <p class="muted">We use mixed-methods: experiments, longitudinal surveys, qualitative interviews, cross-cultural comparisons, and open data sharing.</p>
-          </div>
-        </div>
-      </div>
     </section>
 
     <!-- PEOPLE -->
@@ -143,7 +125,7 @@
           <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
                data-name="Prof. Xiaomeng Hu"
                data-role="Principal Investigator"
-               data-bio="Email: xiaomenghu@ruc.edu.cn">
+               data-bio="Ph.D. in Psychology, Rutgers, The State University of New Jersey, USA;Postdoctoral Researcher/Assistant Researcher, Department of Psychology, Tsinghua University;Email: xiaomenghu@ruc.edu.cn">
             <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/94fecda197684a2552420cf062aa70519b4ac4fc/hxm.jpg" alt="Xiaomeng Hu"></div>
             <div>
               <div style="font-weight:600">Prof. Xiaomeng Hu</div>
@@ -206,7 +188,6 @@
     <!-- RESEARCH -->
     <section id="research">
     <h2>Research</h2>
-    <p>Our laboratory operates within the theoretical framework of cultural psychology, aiming to explore the psychological processes and behavioral patterns that are both universal and culturally specific among humans. We seek to answer what psychological and behavioral traits are shared by humans as cultural beings and which are unique to specific cultures, while also investigating the dynamic construction between culture and psychology.</p>
     <p>Cultural psychology holds both theoretical and applied value. Theoretically, future research will uncover the biological, psychological, and social mechanisms through which culture constructs psychology. In application, it will expand the translation of cultural psychology findings in political, business, and academic spheres. For example, in politics, this includes cultural confidence, cultural soft power, and building a community with a shared future for humanity; in business, it involves cross-cultural management, localization of global brands, and organizational culture; in academia, it encompasses interdisciplinary integration and collaboration.</p>
 
     <h3>Specific Research Questions</h3>
@@ -229,6 +210,14 @@
       <!-- New publications inserted -->
       <h3 style="margin-top:20px;font-weight:700">International Journal Articles</h3>
 
+      <div class="card">
+        <div style="font-weight:700">Liu, H., Li, Q., Sun, Y., Chen, M., An, Y., Talhelm, T., & Hu, X. (2025). Artificial Intelligence Versus Human Fundraisers: Evidence That Narrative Perspective and Fundraiser Identity Influence Donation Intentions.  <span class="muted">Cyberpsychology, Behavior, and Social Networking, 28(10), 698-706.</span></div>
+      </div>
+
+       <div class="card">
+        <div style="font-weight:700">Sun, Y., Teng, Y., Zhao, S., Liu, H., Li, Q., Qin, Q., & Hu, X. (2025). How to capture moral behaviors: From laboratory to everyday life. <span class="muted">Well-Being Sciences Review, 1(2), 86-96. </span></div>
+      </div>
+      
       <div class="card">
         <div style="font-weight:700">Hu, X., & Yan, C. G. (2024). Current status and future challenges in brain imaging: Insights from leading experts. <span class="muted">Medicine Plus, 100049.</span></div>
       </div>
@@ -298,28 +287,13 @@
     <section id="opportunities">
       <div class="card">
         <h2>Opportunities</h2>
-        <p class="muted">We recruit motivated undergraduate research assistants, master's and PhD students, and postdoctoral fellows. Typical openings include paid RA roles and thesis supervision.</p>
+        <p class="muted">We recruit motivated research assistants. </p>
         <h4 style="margin-top:10px">How to apply</h4>
         <ol class="muted">
-          <li>Email a CV, brief research statement, and transcripts to <strong>cola@university.edu</strong>.</li>
+          <li>Email a CV and a brief research statement to <strong>xiaomenghu@ruc.edu.cn</strong>.</li>
           <li>If shortlisted, we'll ask for a short writing sample and a short interview.</li>
           <li>Positions often start at the beginning of each semester (check announcements).</li>
         </ol>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact">
-      <div class="card">
-        <h2>Contact</h2>
-        <p class="muted">Cultural Psychology Lab — Department of Psychology, [Your Institution]</p>
-        <form onsubmit="event.preventDefault();alert('Contact form submitted (demo) — replace with your backend).');" style="display:grid;grid-template-columns:1fr 1fr;gap:12px;align-items:start">
-          <input placeholder="Name" required style="padding:10px;border-radius:8px;border:1px solid rgba(15,23,42,0.06)" />
-          <input type="email" placeholder="Email" required style="padding:10px;border-radius:8px;border:1px solid rgba(15,23,42,0.06)" />
-          <input placeholder="Subject" style="padding:10px;border-radius:8px;border:1px solid rgba(15,23,42,0.06);grid-column:1/3" />
-          <textarea placeholder="Message" style="padding:10px;border-radius:8px;border:1px solid rgba(15,23,42,0.06);grid-column:1/3;height:120px"></textarea>
-          <button class="cta" style="grid-column:1/3;width:160px">Send message</button>
-        </form>
       </div>
     </section>
 
@@ -327,7 +301,7 @@
 
   <footer>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:20px;flex-wrap:wrap">
-      <div class="muted">© <span id="year"></span> Cultural Psychology Lab — [Your Institution]. All rights reserved.</div>
+      <div class="muted">© <span id="year"></span> Cultural Psychology Lab — Renmin University of China. All rights reserved.</div>
       <div style="display:flex;gap:12px;align-items:center">
         <a href="#">Twitter</a>
         <a href="#">LinkedIn</a>
