--- a/index.html
+++ b/index.html
@@ -114,76 +114,122 @@
       </aside>
     </section>
 
-    <!-- PEOPLE -->
-    <section id="people">
-      <div class="card">
-        <h2>People</h2>
-        <p class="muted">Faculty, postdocs, PhD students, collaborators, and alumni.</p>
-        <div class="people-list" style="margin-top:14px">
+   <!-- PEOPLE -->
+<section id="people">
+  <div class="card">
+    <h2>People</h2>
+    <p class="muted">Faculty, collaborators, students, and research assistants.</p>
 
-          <!-- PI -->
-          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
-               data-name="Prof. Xiaomeng Hu"
-               data-role="Principal Investigator"
-               data-bio="Ph.D. in Psychology, Rutgers, The State University of New Jersey, USA;Postdoctoral Researcher/Assistant Researcher, Department of Psychology, Tsinghua University;Email: xiaomenghu@ruc.edu.cn">
-            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/94fecda197684a2552420cf062aa70519b4ac4fc/hxm.jpg" alt="Xiaomeng Hu"></div>
-            <div>
-              <div style="font-weight:600">Prof. Xiaomeng Hu</div>
-              <div class="muted">Principal Investigator</div>
-            </div>
-          </div>
+    <!-- PI -->
+    <h3 style="margin-top:20px;font-weight:700">Principal Investigator</h3>
+    <div class="people-list" style="margin-top:10px">
 
-          <!-- Ziyan Wang -->
-          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
-               data-name="Ziyan Wang"
-               data-role="Master Student"
-               data-bio="Research interest: East Asian Culture & Mental Health. Email: 627389063@qq.com">
-            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/94fecda197684a2552420cf062aa70519b4ac4fc/wzy.png" alt="Ziyan Wang"></div>
-            <div>
-              <div style="font-weight:600">Ziyan Wang</div>
-              <div class="muted">Master Student</div>
-            </div>
-          </div>
-
-          <!-- Huarong Liu -->
-          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
-               data-name="Huarong Liu"
-               data-role="Master Student"
-               data-bio="Research interest: AI for Prosocial Behavior. Email: 2023101969@ruc.edu.cn">
-            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/94fecda197684a2552420cf062aa70519b4ac4fc/lhr.png" alt="Huarong Liu"></div>
-            <div>
-              <div style="font-weight:600">Huarong Liu</div>
-              <div class="muted">Master Student</div>
-            </div>
-          </div>
-
-          <!-- Qilong Li -->
-          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
-               data-name="Qilong Li"
-               data-role="Master Student"
-               data-bio="Research interest: Moral psychology. Email: liqilong20@ruc.edu.cn">
-            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/94fecda197684a2552420cf062aa70519b4ac4fc/lql.png" alt="Qilong Li"></div>
-            <div>
-              <div style="font-weight:600">Qilong Li</div>
-              <div class="muted">Master Student</div>
-            </div>
-          </div>
-
-          <!-- Yumeng Sun -->
-          <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
-               data-name="Yumeng Sun"
-               data-role="Master Student"
-               data-bio="Research interest: AI for moral psychology and well-being. Email: 2025103903@ruc.edu.cn">
-            <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/94fecda197684a2552420cf062aa70519b4ac4fc/sym.png" alt="Yumeng Sun"></div>
-            <div>
-              <div style="font-weight:600">Yumeng Sun</div>
-              <div class="muted">Master Student</div>
-            </div>
-          </div>
-
+      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+           data-name="Prof. Xiaomeng Hu"
+           data-role="Principal Investigator"
+           data-bio="Ph.D. in Psychology, Rutgers University; Postdoctoral Researcher, Tsinghua University; Email: xiaomenghu@ruc.edu.cn">
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/hxm.jpg" alt="Xiaomeng Hu"></div>
+        <div>
+          <div style="font-weight:600">Prof. Xiaomeng Hu</div>
+          <div class="muted">Principal Investigator</div>
         </div>
       </div>
-    </section>
+
+    </div>
+
+    <!-- Collaborators -->
+    <h3 style="margin-top:30px;font-weight:700">Collaborators</h3>
+    <div class="people-list" style="margin-top:10px">
+
+      <!-- Kaiping Peng -->
+      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+           data-name="Prof. Kaiping Peng"
+           data-role="Collaborator"
+           data-bio="Department of Psychological and Cognitive Sciences, Tsinghua University. Email: pengkp@tsinghua.edu.cn">
+        <div class="avatar"><img src="PUT-YOUR-IMAGE-LINK-HERE" alt="Kaiping Peng"></div>
+        <div>
+          <div style="font-weight:600">Prof. Kaiping Peng</div>
+          <div class="muted">Collaborator</div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Students -->
+    <h3 style="margin-top:30px;font-weight:700">Students</h3>
+    <div class="people-list" style="margin-top:10px">
+
+      <!-- Ziyan Wang -->
+      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+           data-name="Ziyan Wang"
+           data-role="Master Student"
+           data-bio="Research interest: East Asian Culture & Mental Health. Email: 627389063@qq.com">
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/wzy.png" alt="Ziyan Wang"></div>
+        <div>
+          <div style="font-weight:600">Ziyan Wang</div>
+          <div class="muted">Master Student</div>
+        </div>
+      </div>
+
+      <!-- Huarong Liu -->
+      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+           data-name="Huarong Liu"
+           data-role="Master Student"
+           data-bio="Research interest: AI for Prosocial Behavior. Email: 2023101969@ruc.edu.cn">
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/lhr.png" alt="Huarong Liu"></div>
+        <div>
+          <div style="font-weight:600">Huarong Liu</div>
+          <div class="muted">Master Student</div>
+        </div>
+      </div>
+
+      <!-- Qilong Li -->
+      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+           data-name="Qilong Li"
+           data-role="Master Student"
+           data-bio="Research interest: Moral psychology. Email: liqilong20@ruc.edu.cn">
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/lql.png" alt="Qilong Li"></div>
+        <div>
+          <div style="font-weight:600">Qilong Li</div>
+          <div class="muted">Master Student</div>
+        </div>
+      </div>
+
+      <!-- Yumeng Sun -->
+      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+           data-name="Yumeng Sun"
+           data-role="Master Student"
+           data-bio="Research interest: AI for moral psychology and well-being. Email: 2025103903@ruc.edu.cn">
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/sym.png" alt="Yumeng Sun"></div>
+        <div>
+          <div style="font-weight:600">Yumeng Sun</div>
+          <div class="muted">Master Student</div>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Research Assistants -->
+    <h3 style="margin-top:30px;font-weight:700">Research Assistants</h3>
+    <div class="people-list" style="margin-top:10px">
+
+      <!-- Yuchao Xie -->
+      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+           data-name="Yuchao Xie"
+           data-role="Research Assistant"
+           data-bio="Research interest: AI-based decision. Email: yuchao.xie@uqconnect.edu.au">
+        <div class="avatar"><img src="PUT-YOUR-IMAGE-LINK-HERE" alt="Yuchao Xie"></div>
+        <div>
+          <div style="font-weight:600">Yuchao Xie</div>
+          <div class="muted">Research Assistant</div>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
 
     <!-- RESEARCH -->
     <section id="research">
