--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
            data-name="Prof. Kaiping Peng"
            data-role="Collaborator"
            data-bio="Department of Psychological and Cognitive Sciences, Tsinghua University. Email: pengkp@tsinghua.edu.cn">
-        <div class="avatar"><img src="PUT-YOUR-IMAGE-LINK-HERE" alt="Kaiping Peng"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/pkp.jpg" alt="Kaiping Peng"></div>
         <div>
           <div style="font-weight:600">Prof. Kaiping Peng</div>
           <div class="muted">Collaborator</div>
@@ -159,17 +159,6 @@
     <h3 style="margin-top:30px;font-weight:700">Students</h3>
     <div class="people-list" style="margin-top:10px">
 
-      <!-- Ziyan Wang -->
-      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
-           data-name="Ziyan Wang"
-           data-role="Master Student"
-           data-bio="Research interest: East Asian Culture & Mental Health. Email: 627389063@qq.com">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/wzy.png" alt="Ziyan Wang"></div>
-        <div>
-          <div style="font-weight:600">Ziyan Wang</div>
-          <div class="muted">Master Student</div>
-        </div>
-      </div>
 
       <!-- Huarong Liu -->
       <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
@@ -206,7 +195,18 @@
           <div class="muted">Master Student</div>
         </div>
       </div>
-
+      
+<!-- Ziyan Wang -->
+      <div class="person card" tabindex="0" role="button" onclick="openPerson(event)"
+           data-name="Ziyan Wang"
+           data-role="Master Student"
+           data-bio="Research interest: East Asian Culture & Mental Health. Email: 627389063@qq.com">
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/wzy.png" alt="Ziyan Wang"></div>
+        <div>
+          <div style="font-weight:600">Ziyan Wang</div>
+          <div class="muted">Master Student</div>
+        </div>
+      </div>
     </div>
 
     <!-- Research Assistants -->
@@ -218,7 +218,7 @@
            data-name="Yuchao Xie"
            data-role="Research Assistant"
            data-bio="Research interest: AI-based decision. Email: yuchao.xie@uqconnect.edu.au">
-        <div class="avatar"><img src="PUT-YOUR-IMAGE-LINK-HERE" alt="Yuchao Xie"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/xyc.jpg" alt="Yuchao Xie"></div>
         <div>
           <div style="font-weight:600">Yuchao Xie</div>
           <div class="muted">Research Assistant</div>
