--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
            data-name="Prof. Xiaomeng Hu"
            data-role="Principal Investigator"
            data-bio="Ph.D. in Psychology, Rutgers University; Postdoctoral Researcher, Tsinghua University; Email: xiaomenghu@ruc.edu.cn">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/hxm.jpg" alt="Xiaomeng Hu"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/hxm.jpg" alt="Xiaomeng Hu"></div>
         <div>
           <div style="font-weight:600">Prof. Xiaomeng Hu</div>
           <div class="muted">Principal Investigator</div>
@@ -146,7 +146,7 @@
            data-name="Prof. Kaiping Peng"
            data-role="Collaborator"
            data-bio="Department of Psychological and Cognitive Sciences, Tsinghua University. Email: pengkp@tsinghua.edu.cn">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/pkp.jpg" alt="Kaiping Peng"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/pkp.jpg" alt="Kaiping Peng"></div>
         <div>
           <div style="font-weight:600">Prof. Kaiping Peng</div>
           <div class="muted">Collaborator</div>
@@ -165,7 +165,7 @@
            data-name="Huarong Liu"
            data-role="Master Student"
            data-bio="Research interest: AI for Prosocial Behavior. Email: 2023101969@ruc.edu.cn">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/lhr.png" alt="Huarong Liu"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/lhr.png" alt="Huarong Liu"></div>
         <div>
           <div style="font-weight:600">Huarong Liu</div>
           <div class="muted">Master Student</div>
@@ -177,7 +177,7 @@
            data-name="Qilong Li"
            data-role="Master Student"
            data-bio="Research interest: Moral psychology. Email: liqilong20@ruc.edu.cn">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/lql.png" alt="Qilong Li"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/lql.png" alt="Qilong Li"></div>
         <div>
           <div style="font-weight:600">Qilong Li</div>
           <div class="muted">Master Student</div>
@@ -189,7 +189,7 @@
            data-name="Yumeng Sun"
            data-role="Master Student"
            data-bio="Research interest: AI for moral psychology and well-being. Email: 2025103903@ruc.edu.cn">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/sym.png" alt="Yumeng Sun"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/sym.png" alt="Yumeng Sun"></div>
         <div>
           <div style="font-weight:600">Yumeng Sun</div>
           <div class="muted">Master Student</div>
@@ -201,7 +201,7 @@
            data-name="Ziyan Wang"
            data-role="Master Student"
            data-bio="Research interest: East Asian Culture & Mental Health. Email: 627389063@qq.com">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/wzy.png" alt="Ziyan Wang"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/wzy.png" alt="Ziyan Wang"></div>
         <div>
           <div style="font-weight:600">Ziyan Wang</div>
           <div class="muted">Master Student</div>
@@ -218,7 +218,7 @@
            data-name="Yuchao Xie"
            data-role="Research Assistant"
            data-bio="Research interest: AI-based decision. Email: yuchao.xie@uqconnect.edu.au">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/index/xyc.jpg" alt="Yuchao Xie"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/xyc.jpg" alt="Yuchao Xie"></div>
         <div>
           <div style="font-weight:600">Yuchao Xie</div>
           <div class="muted">Research Assistant</div>
