--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
            data-name="Siqi Zhao"
            data-role="Master Student(Graduated in June 2025)"
            data-bio="Research interest: Moral psychology. Email: zhaosiqi0812@163.com">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/lhr.png" alt="Siqi Zhao"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/zsq.png" alt="Siqi Zhao"></div>
         <div>
           <div style="font-weight:600">Siqi Zhao</div>
           <div class="muted">Master Student(Graduated in June 2025)</div>
@@ -329,6 +329,10 @@
       <h3 style="margin-top:20px;font-weight:700">International Journal Articles</h3>
 
       <div class="card">
+        <div style="font-weight:700">Hu, X., Ma, H. Q., Tian, Y. Q., Hu, Y. H., Chen, S. X., Castellanos, F. X., ... & Yan, C. G. (2025). The neural basis of dialectical thinking: recent advances and future prospects. <span class="muted">Reviews in the Neurosciences, (0).</span></div>
+      </div>
+      
+      <div class="card">
         <div style="font-weight:700">Liu, H., Li, Q., Sun, Y., Chen, M., An, Y., Talhelm, T., & Hu, X. (2025). Artificial Intelligence Versus Human Fundraisers: Evidence That Narrative Perspective and Fundraiser Identity Influence Donation Intentions.  <span class="muted">Cyberpsychology, Behavior, and Social Networking, 28(10), 698-706.</span></div>
       </div>
 
@@ -395,6 +399,7 @@
         <li>潇檬 译. (2024). 《社会心理学与人类本性》. 中国人民大学出版社</li>
         <li>潇檬 等 译. (2024). 《思考：回忆录》. 中国人民大学出版社</li>
         <li>潇檬 主编. (2024). 《和心理学大咖聊聊天》. 北京颉滕文化传媒公司</li>
+        <li>潇檬 等 译. (2025). 《人类如何思考：社会心理学大师的人生回忆录》. 中国人民大学出版社</li>
       </ol>
 
     </div>
