--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
            data-name="Yue Teng"
            data-role="Master Student（Graduated in June 2024)"
            data-bio="Research interest: AI-Human interaction; LLM for decoding neural data. Email: yuekayteng@connect.hku.hk">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/ty.png" alt="Yue Teng"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/ty.jpg" alt="Yue Teng"></div>
         <div>
           <div style="font-weight:600">Yue Teng</div>
           <div class="muted">Master Student（Graduated in June 2024)</div>
@@ -158,7 +158,7 @@
            data-name="Siqi Zhao"
            data-role="Master Student(Graduated in June 2025)"
            data-bio="Research interest: Moral psychology. Email: zhaosiqi0812@163.com">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/zsq.png" alt="Siqi Zhao"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/zsq.jpg" alt="Siqi Zhao"></div>
         <div>
           <div style="font-weight:600">Siqi Zhao</div>
           <div class="muted">Master Student(Graduated in June 2025)</div>
@@ -259,7 +259,7 @@
            data-name="Prof. Zhi Liu"
            data-role="Collaborator"
            data-bio="Department of Organization and Strategy Management, Peking University. Email: lz@gsm.pku.edu.cn">
-        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/lz.jpg" alt="Zhi Liu"></div>
+        <div class="avatar"><img src="https://raw.githubusercontent.com/FlyingDvD-wzy/culturalpsychologylab.github.io/main/lz.png" alt="Zhi Liu"></div>
         <div>
           <div style="font-weight:600">Prof. Zhi Liu</div>
           <div class="muted">Collaborator</div>
